wiki: Fix diameter, use bz2, dont print

--- a/wiki/Wiki.ipynb
+++ b/wiki/Wiki.ipynb
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def loadGraphs():\n",
@@ -76,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Uncomment the following statement when running code for the first time(and comment it back later)\n",
@@ -98,12 +102,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)     \n",
+    "for g in graphs:   \n",
     "    vertices = g.new_graph_property('float')\n",
     "    vertices[g] = len(g.get_vertices())\n",
     "    g.graph_properties['vertices'] = vertices\n",
@@ -117,12 +121,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    degree_in = g.new_graph_property('float')\n",
     "    degree_in_std = g.new_graph_property('float')\n",
     "    degree_in[g], degree_in_std[g] = vertex_average(g, 'in')\n",
@@ -146,12 +150,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    clustering = g.new_graph_property('float')\n",
     "    clustering_std = g.new_graph_property('float')\n",
     "    clustering[g], clustering_std[g] = global_clustering(g)\n",
@@ -163,12 +167,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    g.vertex_properties['pagerank'] = pagerank(g)"
    ]
   },
@@ -176,12 +180,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    vs = g.get_vertices()\n",
     "    \n",
     "    degree_in = g.new_vertex_property('int')\n",
@@ -200,11 +204,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    eigen = g.new_graph_property('float')\n",
     "    eigen[g], g.vertex_properties['eigenvector'] = eigenvector(g)\n",
     "    g.graph_properties['eigenvector'] = eigen"
@@ -213,11 +219,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    hits_eigen = g.new_graph_property('float')\n",
     "    hits_eigen[g], g.vertex_properties['hits_authority'], g.vertex_properties['hits_hub'] = hits(g)\n",
     "    g.graph_properties['hits_eigen'] = hits_eigen"
@@ -226,25 +234,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for g in graphs:\n",
     "    g.vertex_properties['largest_connected_component'] = label_largest_component(g)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "graphs = loadGraphs()\n",
-    "display(\"Loaded measures:\")\n",
-    "display(\"For vertices:\", [name for (name, v) in graphs[-1].vertex_properties.items()])\n",
-    "display(\"For graph:\", [name for (name, v) in graphs[-1].graph_properties.items()])\n",
-    "display(graphs)"
+    "for g in graphs:\n",
+    "    for (j, v) in enumerate(g.vertex_properties['largest_connected_component']):\n",
+    "        if v == 0:\n",
+    "            continue\n",
+    "            \n",
+    "        diameter = g.new_graph_property('float')\n",
+    "        diameter[g], _ = pseudo_diameter(g, source=j)\n",
+    "        g.graph_properties['diameter'] = diameter\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saveGraphs(graphs)"
    ]
   },
   {
@@ -295,34 +321,6 @@
    "source": [
     "for (i, g) in enumerate(graphs):\n",
     "    display(i)\n",
-    "    for (j, v) in enumerate(g.vertex_properties['largest_connected_component']):\n",
-    "        if v == 0:\n",
-    "            continue\n",
-    "            \n",
-    "        diameter = g.new_graph_property('float')\n",
-    "        diameter[g], _ = pseudo_diameter(g, source=j)\n",
-    "        g.graph_properties['diameter'] = diameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "saveGraphs(graphs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (i, g) in enumerate(graphs):\n",
-    "    display(i)\n",
     "    m = g.new_graph_property('float')\n",
     "    bm = minimize_blockmodel_dl(g)\n",
     "    m[g] = modularity(g, bm.get_blocks())\n",
@@ -335,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "saveGraphs(graphs)"
@@ -360,6 +360,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graphs = loadGraphs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -377,7 +389,7 @@
     "            d[p].append(np.nan)\n",
     "        \n",
     "df = pd.DataFrame(d).sort_values('timestamp').reset_index(drop=True)\n",
-    "display(df)"
+    "df.to_pickle('data/df_graph.bz2')"
    ]
   },
   {
@@ -387,8 +399,7 @@
    "outputs": [],
    "source": [
     "dfs = []\n",
-    "for (i,g) in enumerate(graphs):\n",
-    "    display(i)\n",
+    "for (i, g) in enumerate(graphs):\n",
     "    d = {}\n",
     "    for (p, v) in g.vertex_properties.items():\n",
     "        if not p == 'name':\n",
@@ -401,18 +412,8 @@
     "        \n",
     "    dfs.append(df)\n",
     "            \n",
-    "df = pd.concat(dfs, axis=1).sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df.to_pickle('data/df.xz')"
+    "df = pd.concat(dfs, axis=1).sort_index()\n",
+    "df.to_pickle('data/df.bz2')"
    ]
   },
   {
@@ -424,7 +425,20 @@
    "outputs": [],
    "source": [
     "### Start execution from here to avoid recomputations\n",
-    "df = pd.read_pickle('data/df.xz')"
+    "df_graph = pd.read_pickle('data/df_graph.bz2')\n",
+    "display(df_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('data/df.bz2')\n",
+    "display(df)"
    ]
   },
   {
